# laboratorio3-kedro

./: README.md
lab3/: main.py
laboratorio3-kedro/: README.md  pyproject.toml  requirements.txt
laboratorio3-kedro/docs/source/: conf.py  index.rst
laboratorio3-kedro/src/laboratorio3_kedro/: __init__.py
sesion_04/LAB4/: .gitignore
sesion_04/LAB4/lab4_api_cv/: pyproject.toml
sesion_04/LAB4/lab4_api_cv/src/lab4_api_cv/api/: main.py
sesion_04/LAB4/lab4_api_cv/src/lab4_api_cv/services/: image_service.py
sesion_04/lab4-1/: main.py
