[tool.poetry]
name = "lab4-api-cv"
version = "0.1.0"
description = "Laboratorio 4: API de Visión por Computadora con FastAPI y Kedro"
authors = ["Dalia"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = ">=0.100.0"
uvicorn = ">=0.22.0"
opencv-python = ">=4.8.0"
numpy = ">=1.24.0"
matplotlib = ">=3.7.0"
python-multipart = ">=0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"